# rDSN

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  run.cmd  run.sh
src/: README.md  (+1 more)
src/plugins_ext/rDSN.dist.service/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
src/plugins_ext/rDSN.dist.service/ext/: gitsource.github  gitsource.xiaomi
src/plugins_ext/rDSN.dist.service/ext/zookeeper/: CMakeLists.txt
src/plugins_ext/rDSN.dist.service/src/: replication.thrift
src/plugins_ext/rDSN.dist.service/src/app_daemon/: CMakeLists.txt  README.md  daemon.server.cpp  daemon.server.h  daemon.test.cpp
src/plugins_ext/rDSN.dist.service/src/app_daemon/test/: gtests  test.config.service.stateless.ini
src/plugins_ext/rDSN.dist.service/src/common/: replication_common.h
src/plugins_ext/rDSN.dist.service/src/fd/failure_detector/: failure_detector.cpp
src/plugins_ext/rDSN.dist.service/src/fd/failure_detector_multimaster/: CMakeLists.txt
src/plugins_ext/rDSN.dist.service/src/meta_server/: CMakeLists.txt  README.md
src/plugins_ext/rDSN.dist.service/src/meta_server/meta_server/: CMakeLists.txt  distributed_lock_zookeeper.test.cpp  failure_detector.test.cpp  meta_state_service.test.cpp
src/plugins_ext/rDSN.dist.service/src/meta_server/meta_server_lib/: CMakeLists.txt  meta_data.cpp  meta_data.h  meta_service_app.cpp  server_load_balancer.cpp  server_state.cpp
src/plugins_ext/rDSN.dist.service/src/meta_server/zookeeper/: zookeeper_session_mgr.cpp
src/plugins_ext/rDSN.dist.service/src/replica_server/: README.md
(+434 files in other folders)
